tests/format/junctions/invalid/junctiondep-not-a-junction.bst
kind: stack
runtime-depends:
- junction: app.bst
  filename: target.bst
